--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             str = trim(str, '0');
             if (str[str.length - 1] == '.')
             {
-                str = str.substring(0, str.Length - 1);
+                str = str.substring(0, str.length - 1);
                 return str;
             }
             return str;
