--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     document.getElementById("start-button").innerText = "You have already unlocked the token!";
                     document.getElementById("start-button").disabled = true;
                 }
-                document.getElementById("start-button1").innerText = "Deposit " + convertUintToReadable(amount, decimal) + symbol;
+                document.getElementById("start-button1").innerText = "Deposit " + convertUintToReadable(amount, decimal) + " " + symbol;
             }
         });
 
