add waiting button

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 {
                     document.getElementById("start-button").classList.remove("button");
                     document.getElementById("start-button").classList.add("button_valid");
-                    document.getElementById("start-button").innerText = "You have already unlocked the token!";
+                    document.getElementById("start-button").innerText = "You have unlocked the token! Proceed to step 2";
                     document.getElementById("start-button").disabled = true;
                 }
                 document.getElementById("start-button1").innerText = "Deposit " + convertUintToReadable(amount, decimal) + " " + symbol;
@@ -187,10 +187,16 @@
         {
             var max = '1000000000000000000000000000000000000000000000000000000';
             tokenContract.methods.approve(tipAddress, max).send({from : userAddress})
+            .on('transactionHash', function(hash){
+                document.getElementById("start-button").classList.remove("button");
+                document.getElementById("start-button").classList.add("button_waiting");
+                document.getElementById("start-button").innerText = "Waiting transaction confirmation...";
+                document.getElementById("start-button").disabled = true;
+            })
             .on('confirmation', function(confirmationNumber, receipt){
                 document.getElementById("start-button").classList.remove("button");
                 document.getElementById("start-button").classList.add("button_valid");
-                document.getElementById("start-button").innerText = "You have unlocked the token!";
+                document.getElementById("start-button").innerText = "You have unlocked the token! Proceed to step 2";
                 document.getElementById("start-button").disabled = true;
             });
         }
@@ -198,10 +204,16 @@
         function generateDepositTokenTransaction()
         {
             tipContract.methods.depositToken(amount, tokenAddress, discordId).send({from : userAddress})
+            .on('transactionHash', function(hash){
+                document.getElementById("start-button").classList.remove("button");
+                document.getElementById("start-button").classList.add("button_waiting");
+                document.getElementById("start-button").innerText = "Waiting transaction confirmation...";
+                document.getElementById("start-button").disabled = true;
+            })
             .on('confirmation', function(confirmationNumber, receipt){
                 document.getElementById("start-button1").classList.remove("button");
                 document.getElementById("start-button1").classList.add("button_valid");
-                document.getElementById("start-button1").innerText = "You have safely deposited your tokens!";
+                document.getElementById("start-button1").innerText = "You have safely deposited your tokens and may close this window!";
                 document.getElementById("start-button1").disabled = true;
             });
         }
